# whisperflow

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: install-launchagent.sh  uninstall-launchagent.sh
whisperflow/: __init__.py  __main__.py  app.py  cleaner.py  config.py  hotkey.py  injector.py  overlay.py  recorder.py  transcriber.py
