[project]
name = "whisperflow"
version = "0.1.0"
description = "Local push-to-talk dictation for macOS on Apple Silicon: hold a hotkey, speak, get polished text typed into any app."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.0",
    "mlx-whisper>=0.4.3",
    "numpy>=2.4.6",
    "pynput>=1.8.2",
    "pyobjc-framework-quartz>=12.1",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.2",
    "rumps>=0.4.0",
    "sounddevice>=0.5.5",
]
